# ipa_marker_detection

./: CMakeLists.txt  README.md  frames.gv  package.xml
include/: Fiducial.h  FiducialArray.h  FiducialMapEntry.h  FiducialMapEntryArray.h  FiducialTransform.h  FiducialTransformArray.h  InitializeMapRequest.h  InitializeMapResponse.h
include/location_finder/: location_finder.h
launch/: camera.launch  location_finder.launch
msg/: Position_publish.msg
rviz/: location_finder.rviz
src/: location_finder.cpp  location_finder_node.cpp  location_listener.cpp  location_listener_node.cpp  location_publisher.cpp  send_location.cpp  service_caller.cpp
